<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/motherboard_layout">    
	<ScrollView
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_above="@+id/linear">
		<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:orientation="vertical">
		     <!-- chip info -->
		     <TextView
			    style="@style/content_title_style"
			    android:text="@string/chip"/>
			 <TextView
			    style="@style/content_title_style"	
			    android:id="@+id/chip"/>			 
			 <View 
			     android:layout_width="fill_parent"
			     android:layout_height="1dp"
			     android:background="#00FF00"/>
		     <!-- Board -->
		     <TextView
			    style="@style/content_title_style"
			    android:text="@string/board"/>
			 <TextView
			    style="@style/content_title_style"	
			    android:id="@+id/board"/>
			 <View 
			     android:layout_width="fill_parent"
			     android:layout_height="1dp"
			     android:background="#00FF00"/>			 
			 <!-- IMEI1 -->
			 <TextView	
			    style="@style/content_title_style"
			    android:text="@string/IMEI1"
			    android:visibility="gone"/>			 
			 <TextView
			    style="@style/content_title_style"	 
			    android:id="@+id/imei1"
                            android:visibility="gone"/>			 
			 <View 
			     android:layout_width="fill_parent"
			     android:layout_height="1dp"
			     android:background="#00FF00"
                             android:visibility="gone"/>
			 <!-- IMEI2 -->
			 <TextView	
			    style="@style/content_title_style"
			    android:text="@string/IMEI2"
                            android:visibility="gone"/>			 
			 <TextView
			    style="@style/content_title_style"	 
			    android:id="@+id/imei2"
                            android:visibility="gone"/>			 
			 <View 
			     android:layout_width="fill_parent"
			     android:layout_height="1dp"
			     android:background="#00FF00"
                             android:visibility="gone"/>
			 <!-- PSN -->
			 <TextView	
			    style="@style/content_title_style"
			    android:text="@string/PSN"/>			 
			 <TextView
			    style="@style/content_title_style"	 
			    android:id="@+id/psn"/>		 
			 <View 
			     android:layout_width="fill_parent"
			     android:layout_height="1dp"
			     android:background="#00FF00"/>
			 <!-- Blutooth address -->
			 <!--<TextView	
			    style="@style/content_title_style"
			    android:text="@string/Blutooth_address"/>			 
			 <TextView
			    style="@style/content_title_style"	 
			    android:id="@+id/blutooth_address"/>			 
			 <View 
			     android:layout_width="fill_parent"
			     android:layout_height="1dp"
			     android:background="#00FF00"/>-->
			 <!-- Wifi address -->
			 <TextView	
			    style="@style/content_title_style"
			    android:text="@string/Wifi_address"/>			 
			 <TextView
			    style="@style/content_title_style"	 
			    android:id="@+id/wifi_address"/>			 
			 <View 
			     android:layout_width="fill_parent"
			     android:layout_height="1dp"
			     android:background="#00FF00"/>
			 <!-- Memory -->
			 <TextView	
			    style="@style/content_title_style"
			    android:text="@string/Memory"/>			 
			 <TextView
			    style="@style/content_title_style"	 
			    android:id="@+id/memory"/>			 
			 <View 
			     android:layout_width="fill_parent"
			     android:layout_height="1dp"
			     android:background="#00FF00"/>
			 <!-- Lcd -->
			 <TextView	
			    style="@style/content_title_style"
			    android:text="@string/lcd"/>			 
			 <TextView
			    style="@style/content_title_style"	 
			    android:id="@+id/lcd"/>			 
			 <View 
			     android:layout_width="fill_parent"
			     android:layout_height="1dp"
			     android:background="#00FF00"/>
			 <!-- camera -->
			 <TextView	
			    style="@style/content_title_style"
			    android:text="@string/camera"/>			 
			 <TextView
			    style="@style/content_title_style"	 
			    android:id="@+id/camera"/>			 
			 <View 
			     android:layout_width="fill_parent"
			     android:layout_height="1dp"
			     android:background="#00FF00"/>
			 <!-- RF and Gps calibration-->			 
			 <TextView
			    style="@style/content_title_style"	 
			    android:id="@+id/rf_calibrate"
			    android:visibility="gone"/>
			 <TextView
			    style="@style/content_title_style"	 
			    android:id="@+id/gps_calibrate"
			    android:visibility="gone"/>
			 <View 
			     android:layout_width="fill_parent"
			     android:layout_height="1dp"
			     android:background="#00FF00"
			     android:visibility="gone"/>			 			 
		</LinearLayout>
    </ScrollView>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"
        android:id="@+id/linear">
		<Button
		    android:id="@+id/motherboard_pass"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
            android:text="@string/pass"/>
		<Button
            android:id="@+id/motherboard_fail"
            android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
            android:text="@string/fail"/>
     </LinearLayout>
</RelativeLayout>
